--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -9,8 +10,10 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/06e0fcae35.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="wrapper">
         <!-- Navbar -->
@@ -18,7 +21,7 @@
             <div class="navbar-container">
                 <div class="navbar-container-left">
                     <img src="img/images.png" alt="Logo Progate" class="navbar-logo">
-                    <span class="navbar-brand">Progate Team D12</span>
+                    <span class="navbar-brand" href="#">Progate Team D12</span>
                 </div>
                 <div class="navbar-container-right">
                     <button type="button" tabindex="1" class="navbar-toggle">
@@ -26,23 +29,99 @@
                         <span class="icon"></span>
                         <span class="icon"></span>
                     </button>
-                    
+
                     <div class="navbar-menu">
                         <ul>
                             <li class="navbar-menu-close">&times;</li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Profile</a></li>
-                            <li><a href="">List app</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Tech News</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </nav> <!-- /Navbar -->
-
-
+        </nav>
+        <!-- /Navbar -->
     </div>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-11">
+                                <span class="h3 text-primary">Profile</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <div class="card-logo">
+                    <div class="card-body-left">
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="img/progate.svg" alt="Logo Progate" width="100%" class="img-circle img-responsive">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <center>
+                                    <span class="h3">Progate Corporation</span>
+                                    <br>
+                                    <span class="subtitle text-muted">progate.com</span>
+                                </center>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <center>
+                                    <div class="row">
+                                        <div class="col-3">
+                                            <a href="#" target="_blank" class="text-primary h4 icon-circle"><i class="fa fa-instagram"></i></a>
+                                        </div>
+                                        <div class="col-3">
+                                            <a href="#" target="_blank" class="text-primary h4 icon-circle"><i
+													class="fa fa-linkedin"></i></a>
+                                        </div>
+                                        <div class="col-3">
+                                            <a href="#" target="_blank" class="text-primary h4 icon-circle"><i
+													class="fa fa-globe"></i></a>
+                                        </div>
+                                    </div>
+                                </center>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-9">
+                <div class="card-content">
+                    <div class="card-heading">
+                        <span class="h3">Hi, We are <span class="text-primary">Team D12 in Progate x OSI</span> &#9889;
+                        </span>
+                        <br>
+                        <span class="subtitle text-muted">A person who interest and passionate about Mobile Development
+							and Web Development</span>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            I'm a Backend Developer with experience using NodeJS, Laravel, Lumen, Codeigniter, and Python. And currently learning about Mobile Development with Flutter.
+                            <br>
+                            <br> 🔭 I’m currently working as Web Developer <span class="text-primary">@Kubelajar.ID</span>
+                            <br> 🌱 I’m currently learning Mobile Development using Flutter <br> ⚡ Fun fact: Give me a coffee for my energy <br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Javascript -->
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
+
 </html>
