--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
                     </div>
                     <div class="card-body">
                         <p>
-                            I'm a Backend Developer with experience using NodeJS, Laravel, Lumen, Codeigniter, and Python. And currently learning about Mobile Development with Flutter.
-                            <br>
-                            <br> 🔭 I’m currently working as Web Developer <span class="text-primary">@Kubelajar.ID</span>
-                            <br> 🌱 I’m currently learning Mobile Development using Flutter <br> ⚡ Fun fact: Give me a coffee for my energy <br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error expedita animi voluptatum laborum voluptas magni aperiam soluta nobis tenetur. Esse inventore iure eius enim neque aut ea similique exercitationem? Dicta!
                         </p>
                     </div>
                 </div>
