--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
                         <span class="h3">Hi, We are <span class="text-primary">Team D12 in Progate x OSI</span> &#9889;
                         </span>
                         <br>
-                        <span class="subtitle text-muted">A person who interest and passionate about Mobile Development
-							and Web Development</span>
+                        <span class="subtitle text-muted">Lorem ipsum dolor sit amet.</span>
                     </div>
                     <div class="card-body">
                         <p>
