Fixed: Mobile query

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <title>Project Team D12 - OSI X PROGATE</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
@@ -43,7 +43,8 @@
         </nav>
         <!-- /Navbar -->
     </div>
-    <div class="container">
+    
+    <div class="container body-section">
         <div class="row">
             <div class="col-12">
                 <div class="card">
