--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Project Team D12 - OSI X PROGATE</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
@@ -43,8 +43,7 @@
         </nav>
         <!-- /Navbar -->
     </div>
-    
-    <div class="container body-section">
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="card">
@@ -79,15 +78,15 @@
                         <div class="row">
                             <div class="col-12">
                                 <center>
-                                    <div class="row-icon">
-                                        <div class="col-icon">
+                                    <div class="row">
+                                        <div class="col-3">
                                             <a href="#" target="_blank" class="text-primary h4 icon-circle"><i class="fa fa-instagram"></i></a>
                                         </div>
-                                        <div class="col-icon">
+                                        <div class="col-3">
                                             <a href="#" target="_blank" class="text-primary h4 icon-circle"><i
 													class="fa fa-linkedin"></i></a>
                                         </div>
-                                        <div class="col-icon">
+                                        <div class="col-3">
                                             <a href="#" target="_blank" class="text-primary h4 icon-circle"><i
 													class="fa fa-globe"></i></a>
                                         </div>
@@ -116,68 +115,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Team -->
-    <section class="team-container">
-        <div class="container">
-            <h2>Meet our team</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, in?</p>
-
-            <div class="grid">
-                <div class="grid-item">
-                    <img src="https://avatars.githubusercontent.com/u/55065320?v=4" alt="Muhammad Iqbaludin Zaky">
-                    <h3>Muhammad Iqbaludin Zaky</h3>
-                    <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
-                        <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <img src="https://avatars.githubusercontent.com/u/74356783?v=4" alt="Andrian Fadhilla">
-                    <h3>Andrian Fadhilla</h3>
-                    <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
-                        <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <img src="https://avatars.githubusercontent.com/u/69211780?s=100&v=4" alt="Muhammad Farid Wijayanto">
-                    <h3>Muhammad Farid Wijayanto</h3>
-                    <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
-                        <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <img src="https://avatars.githubusercontent.com/u/72310612?s=100&v=4" alt="Ichsan Wibawa">
-                    <h3>Ichsan Wibawa</h3>
-                    <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
-                        <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <img src="https://avatars.githubusercontent.com/u/59132829?s=100&v=4" alt="Jason">
-                    <h3>Jason</h3>
-                    <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
-                        <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Edit line dibawah ini untuk membuat footer -->
-    <footer class="footer">
-        
-    </footer>
 
     <!-- Javascript -->
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
