Update footer > index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
 
     <!-- Edit line dibawah ini untuk membuat footer -->
     <footer class="footer">
-        
+        <div class="container">
+            
+        </div>
     </footer>
 
     <!-- Javascript -->
