--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
         <!-- /Navbar -->
     </div>
-    
+
     <div class="container body-section">
         <div class="row">
             <div class="col-12">
@@ -51,7 +51,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-11">
-                                <span class="h3 text-primary">Profile</span>
+                                <span class="h3 text-primary">About us</span>
                             </div>
                         </div>
                     </div>
@@ -109,8 +109,10 @@
                     </div>
                     <div class="card-body">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error expedita animi voluptatum laborum voluptas magni aperiam soluta nobis tenetur. Esse inventore iure eius enim neque aut ea similique exercitationem? Dicta!
+                            We are start-up technology company located in Jakarta, Indonesia. This technology startup company is shaded by programmers who are reliable in their fields. We have several products that we have launched in various bases such as mobile applications (android
+                            and apple) and web applications. In the next two months, the start-up will be funded by foreign investors such as Google, Tesla, and Tencent. Hopefully within a year, this startup will belong to the unicorn startup group.
                         </p>
+
                     </div>
                 </div>
             </div>
@@ -176,7 +178,54 @@
 
     <!-- Edit line dibawah ini untuk membuat footer -->
     <footer class="footer">
-        
+        <div class="container-footer">
+            <div class="floatleft">
+                <div class="progate">
+                    <h1>Progate</h1>
+                </div>
+                <div class="about">
+                    <table>
+                        <tr>
+                            <td>Date Founded</td>
+                            <td>:</td>
+                            <td>31/07/2014</td>
+                        </tr>
+                        <tr>
+                            <td>Business Activity</td>
+                            <td>:</td>
+                            <td>Planning, development, and operation</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>of the progate platform</td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
+            <div class="floatright">
+                <h1 class="meet">Meet us on :</h1>
+                <div class="row-icon">
+                    <div class="col-icon">
+                        <a href="https://www.instagram.com/progateID/" target="_blank" class="text-primary h4 icon-circle"><i class="fa fa-instagram"></i></a>
+                    </div>
+                    <div class="col-icon">
+                        <a href="https://www.youtube.com/channel/UCJxi-IBVMaEzq1ST-wjrY8g" target="_blank" class="text-primary h4 icon-circle"><i
+                                    class="fa fa-youtube"></i></a>
+                    </div>
+                    <div class="col-icon">
+                        <a href="https://www.facebook.com/ProgateID/" target="_blank" class="text-primary h4 icon-circle"><i
+                                    class="fa fa-facebook"></i></a>
+                    </div>
+                    <div class="col-icon">
+                        <a href="https://twitter.com/progateID" target="_blank" class="text-primary h4 icon-circle"><i
+                                    class="fa fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">copyright © Team D12 OSI x Progate</div>
     </footer>
 
     <!-- Javascript -->
