Update Mobile responsive

--- a/index.html
+++ b/index.html
@@ -178,11 +178,9 @@
 
     <!-- Edit line dibawah ini untuk membuat footer -->
     <footer class="footer">
-        <div class="container-footer">
+        <div class="footer-container">
             <div class="floatleft">
-                <div class="progate">
-                    <h1>Progate</h1>
-                </div>
+                <h2 class="progate">Progate</h2>
                 <div class="about">
                     <table>
                         <tr>
@@ -205,7 +203,7 @@
                 </div>
             </div>
             <div class="floatright">
-                <h1 class="meet">Meet us on :</h1>
+                <h2 class="meet">Meet us on :</h2>
                 <div class="row-icon">
                     <div class="col-icon">
                         <a href="https://www.instagram.com/progateID/" target="_blank" class="text-primary h4 icon-circle"><i class="fa fa-instagram"></i></a>
