--- a/index.html
+++ b/index.html
@@ -130,45 +130,45 @@
                     <img src="https://avatars.githubusercontent.com/u/55065320?v=4" alt="Muhammad Iqbaludin Zaky">
                     <h3>Muhammad Iqbaludin Zaky</h3>
                     <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
+                        <span class="flex-icon"><i class="fa fa-whatsapp"></i></span>
                         <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
+                        <span class="flex-icon"><i class="fa fa-instagram"></i></span>
                     </div>
                 </div>
                 <div class="grid-item">
                     <img src="https://avatars.githubusercontent.com/u/74356783?v=4" alt="Andrian Fadhilla">
                     <h3>Andrian Fadhilla</h3>
                     <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
+                        <span class="flex-icon"><i class="fa fa-whatsapp"></i></span>
                         <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
+                        <span class="flex-icon"><i class="fa fa-instagram"></i></span>
                     </div>
                 </div>
                 <div class="grid-item">
                     <img src="https://avatars.githubusercontent.com/u/69211780?s=100&v=4" alt="Muhammad Farid Wijayanto">
                     <h3>Muhammad Farid Wijayanto</h3>
                     <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
+                        <span class="flex-icon"><i class="fa fa-whatsapp"></i></span>
                         <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
+                        <span class="flex-icon"><i class="fa fa-instagram"></i></span>
                     </div>
                 </div>
                 <div class="grid-item">
                     <img src="https://avatars.githubusercontent.com/u/72310612?s=100&v=4" alt="Ichsan Wibawa">
                     <h3>Ichsan Wibawa</h3>
                     <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
+                        <span class="flex-icon"><i class="fa fa-whatsapp"></i></span>
                         <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
+                        <span class="flex-icon"><i class="fa fa-instagram"></i></span>
                     </div>
                 </div>
                 <div class="grid-item">
                     <img src="https://avatars.githubusercontent.com/u/59132829?s=100&v=4" alt="Jason">
                     <h3>Jason</h3>
                     <div class="flex">
-                        <span class="flex-icon"><i class="fa fa-facebook"></i></span>
+                        <span class="flex-icon"><i class="fa fa-whatsapp"></i></span>
                         <span class="flex-icon"><i class="fa fa-linkedin"></i></span>
-                        <span class="flex-icon"><i class="fa fa-globe"></i></span>
+                        <span class="flex-icon"><i class="fa fa-instagram"></i></span>
                     </div>
                 </div>
             </div>
