just add small details

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                         <span class="h3">Hi, We are <span class="text-primary">Team D12 in Progate x OSI</span> &#9889;
                         </span>
                         <br>
-                        <span class="subtitle text-muted">Lorem ipsum dolor sit amet.</span>
+                        <span class="subtitle text-muted"> A creative IT company specialize in Website Development, UI/UX Design & Development, and Mobile Application. </span>
+                        <!-- Cyber Security, and Digital Marketing</span> -->
                     </div>
                     <div class="card-body">
                         <p>
@@ -123,7 +124,8 @@
     <section class="team-container">
         <div class="container">
             <h2>Meet our team</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, in?</p>
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, in?</p> -->
+            <p>This web is developed by several programmers and the following is a list of related programmers over this web.</p>
 
             <div class="grid">
                 <div class="grid-item">
